# SpotiDownloader

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/auth/: config.py
src/database/: config.py
src/downloader/: depends.py  routes.py  strategies.py
src/static/: index.html
src/tasks/: manager.py  tasks.py
src/utils/: files.py
