[tool.poetry]
name = "spotidown"
version = "0.1.0"
description = ""
authors = ["poocomagad <kalaevkirill32@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
flet = "^0.28.3"
spotipy = "^2.25.1"
youtube-search-python = "^1.6.6"
pydantic-settings = "^2.10.1"
celery = "^5.3.0"
yt-dlp = "^2025.6.30"
jsonpath-ng = "^1.7.0"
httpx = "^0.27.0"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
